objects/ssot__AssessmentQuestionVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivationDateTime__c</fullName>
        <label>Activation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionId__c</fullName>
        <label>Assessment Question</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionVersionStatus__c</fullName>
        <label>Assessment Question Version Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeactivationDateTime__c</fullName>
        <label>Deactivation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HelpText__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Question Version Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOptionSourceResponseValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Option Source Response Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValuesText__c</fullName>
        <label>Response Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291285246_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionVersion_Assessment_rel</label>
        <referenceTo>ssot__AssessmentQuestion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionVersion_Assessment_rel</relationshipLabel>
        <relationshipName>rel_1720291285246_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>